@@ -1,15 +1,25 @@
+
 strapply <- 
-function (X, pattern, FUN = function(x, ...) x, ..., simplify = FALSE, 
-    USE.NAMES = FALSE, combine = c) 
+function (X, pattern, FUN = function(x, ...) x, ...,
+    simplify = FALSE, USE.NAMES = FALSE, combine = c) 
 {
     FUN <- match.funfn(FUN)
-    result <- sapply(X, function(x) {
+    ff <- function(x) {
         v <- NULL
-        gsubfn(pattern, function(x, ...) 
-		v <<- c(v, combine(FUN(x, ...))), x, ...)
+	first <- TRUE
+        gsubfn(pattern, function(x, ...) { 
+		# print(x); print(FUN(x, ...))
+		v <<- if (first) combine(FUN(x, ...))
+		else c(v, combine(FUN(x, ...))) 
+		first <<- FALSE
+	}, x, ...)
 	v
-    }, simplify = is.logical(simplify) && simplify, USE.NAMES = USE.NAMES)
+    }
+    result <- sapply(X, ff,
+	simplify = is.logical(simplify) && simplify, USE.NAMES = USE.NAMES)
     if (is.logical(simplify)) 
         result
-    else do.call(simplify, result)
+    else do.call(match.funfn(simplify), result)
 }
+
+
